maze.lessons.maze.island.IslandMaze.scala.error
Escaper:11: error: not found: value Y
  Y=getY()
  ^Escaper:12: error: not found: value Y
  while (Y!=0){
         ^