maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
  while (!estSurBiscuit()){
    keepHandOnSideWall()
  }
  prendBiscuit()
}


def keepHandOnSideWall(){
  Y=getY()
  while (Y!=0){
    avance()
  }
  gauche()
  if (!estFaceMur()){
    avance()
  } else {
    droite()
    if (!estFaceMur()){
      avance()
    } else {
      droite()
      if (!estFaceMur()){
        avance()
      } else {
        droite()
        avance()
      }
    }
  }}